# MakeAgents

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README copy.ipynb  README.ipynb  README.md  TODO  make_agents.ipynb  openai.ipynb  pyproject.toml
.github/workflows/: pythonpackage.yml
docs/: CNAME  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs_creator/source/: conf.py
examples/: email_verification_example.py  get_email.ipynb
make_agent/: __init__.py
make_agents/: __init__.py  bonus.py  cli.py  gpt.py  make_agents.py
make_agents/agents/: bash_assistant.py
scripts/: assert_docs_up_to_date.py  replace_readme_image_links.py
tests/: test_init.py  test_make_agents.py
